# NoName-Surveys

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.local.yml  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  Makefile  README.md  api_documentation.md  config.py  pyproject.toml  settings.toml
backend/scripts/: test_data.sh
backend/src/: main.py
backend/src/api/: main.py  router.py
backend/src/api/models/: base.py  question_base.py  survey.py
backend/src/api/routes/: answers.py  survey_drafts.py  surveys.py  user_groups.py  users.py
backend/src/api/utils/: helpers.py
backend/src/cryptography/: fingerprint.py  parameters.py  ring_signature.py  verify_key.py
backend/src/db/: base.py
backend/src/db/crud/: answer.py  ring_member.py  survey.py  survey_draft.py  user.py  user_groups.py
backend/src/db/models/: access_to_view_results.py  answer.py  ring.py  ring_member.py  survey.py  survey_draft.py  user.py  user_group.py  user_group_member.py
backend/src/services/: answers_service.py  survey_draft_service.py  survey_service.py  user_group_service.py  user_service.py
backend/src/services/utils/: exceptions.py  helpers.py
backend/src/util/: random_generator.py
backend/tests/: common_values.py  conftest.py
backend/tests/api/models/: test_base.py
backend/tests/api/routes/: test_answers.py  test_survey_drafts.py  test_surveys.py  test_user_groups.py  test_users.py
backend/tests/api/utils/: test_helpers.py
backend/tests/cryptography/: test_fingerprint.py  test_lrs.py  test_verify_key.py
backend/tests/db/crud/: test_answer_repository.py  test_ring_member_repository.py  test_survey_draft_repository.py  test_survey_repository.py  test_user_groups_repository.py  (+1 more)
backend/tests/services/: test_answers_service.py  test_survey_draft_service.py  test_survey_service.py  test_user_group_service.py  test_user_service.py
frontend/wasm/: Cargo.toml  modulize.js
frontend/wasm/src/: lib.rs  ring.rs
frontend/wasm/test_data/: test_incorrect_pub_key.txt  test_non_numeric_pub_key.txt  test_pub_key1.txt  test_pub_key2.txt  test_pub_key3.txt  test_zero_pub_key.txt
(+513 files in other folders)
