[tool.poetry]
name = "noname"
version = "0.0.1"
description = ""
authors = ["Sebastian Jerzykiewicz <sebastian.jerzykiewicz@grupawp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"
dynaconf = "^3.2.5"
mysql-connector-python = "^8.4.0"
pymysql = "^1.1.1"
psycopg2-binary = "^2.9.9"
pycryptodome = "^3.20.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
codespell = "^2.2.4"
coverage = "^7.2.7"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
isort = "^5.11.4"
mypy = "^1.1.1"
pre-commit = "^3.2.1"
pytest = "^7.1.2"
pytest-cov = "^4.1.0"
pyupgrade = "^3.4.0"
ruff = "^0.0.286"
yesqa = "^1.4.0"

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"
py_version = '310'
use_parentheses = true

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | data
  | notebooks
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.codespell]
ignore-words = ".codespell"

[tool.pytest.ini_options]
addopts = "-ra --log-level=CRITICAL"
minversion = "7.0"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
