[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
sha2 = "0.10"
sha3 = "0.10.8"
num-bigint = { version = "0.4", features=["rand"] }
num-traits = "0.2"
num-bigint-dig = "0.8.4"
pem = "3"
